--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-scrolling></app-scrolling>
 <div id="sticky-bar" #stickyBar>
     <app-sticky-bar></app-sticky-bar>
 </div>
@@ -5,4 +6,5 @@
 <app-app-bar></app-app-bar></div>
 <img #image style="width: 100%; margin-top: 10px;" src="assets/paint.PNG" alt="">
 <app-first-section></app-first-section>
+<app-scrolling></app-scrolling>
 <app-second-section></app-second-section>
